<resources>
    <string name="app_name">T6_Trabajadores</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="edad">Edad</string>
    <string name="boton_add">add</string>
    <string-array name="puestos">
        <item>Administrativo</item>
        <item>Comercial</item>
        <item>Informática</item>
        <item>Soporte</item>
    </string-array>
</resources>